fix facebook analytics
